# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  03 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    Fixed config-system for only changing hostname when needed
    udhcpc and dhclient now restore saved configs when stopping and work
    with non-infinite leases
    Moved generic dhcp options into a space seperated string
    udhcpc now caches it's IP address and requests it the next time it starts
    if the address is not released
    udhcpc and dhclient no longer flush interfaces if we don't need too
    ipppd module now looks for ipppd in /usr/sbin - fixes #73067

  02 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    Merge time checking function (is_older_than) to help simplify config 
    file update checking.  Used for now in env-update.sh #71285.  Function 
    written by Paul Pacheco #55329.

  02 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    Added option dhcp_release to specify if we release the DHCP lease or not
    defaults to no
    Changed variables peer_* to dhcp_*
    dhclient and udhcpc now specify a pidfile
    Fixed iwconfig report if iwgetid does not support --channel

  01 Dec 2004; Mike Frysinger <vapier@gentoo.org>:

    Refix and clean up the netmount script to kill processes #64034.

  01 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    Documentation fixes regarding iwconfig and linux-wlan-ng
    Fixed bonding deps per bug #71419

  30 Nov 2004; Mike Frysinger <vapier@gentoo.org>:

    Fix the UML/coLinux check in init.d/clock #72937.

    Allow the user to override the default mount options via /etc/fstab 
    for all the mounts.  Added a 'is_in_fstab' function to see if the 
    user has defined the mount, and if not, fall back to the hardcoded 
    stuff from before.  This also lets us get rid of $RC_DEVICE_FS #70044.

  26 Nov 2004; Roy Marples <uberlord@gentoo.org>:

    Fixed up address detection in apipa